...
  onAddMoment,
}: AddMomentSheetProps) {
  const momentTimeInputRef = useRef<SheetTextInputRef>(null);

  return (
    <BottomActionSheet
      testID="add-moment-sheet"
      sheetRef={sheetRef}
      bottomInset={bottomInset}
      eyebrow="Timeline"
      title="Add moment"
      footer={(
        <PrimaryButton
          testID="add-moment-submit-button"
          label="Add moment"
          onPress={onAddMoment}
          icon={(
            <PathIcon color={colors.paperCard} size={18} weight="bold" />
          )}
        />
...
